--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,36 +1,38 @@
 /* Write your global styles here, in PostCSS syntax */
 
+/* Write your global styles here, in PostCSS syntax */
+
 @tailwind base;
 
 :root {
-  font-family: Monospace;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  max-width: 100vw;
-  scroll-behavior: smooth;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	font-family: Monospace;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 400;
+	max-width: 100vw;
+	scroll-behavior: smooth;
+	color-scheme: light dark;
+	color: rgba(255, 255, 255, 0.87);
+	background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	:root {
+		color: #213547;
+		background-color: #ffffff;
+	}
+	a:hover {
+		color: #747bff;
+	}
+	button {
+		background-color: #f9f9f9;
+	}
 }
 
 @tailwind components;
