--- a/src/app.postcss
+++ b/src/app.postcss
@@ -22,6 +22,10 @@
 	-webkit-text-size-adjust: 100%;
 }
 
+* {
+	scroll-behavior: smooth;
+}
+
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
